# server/src/main/resources/static/docs/api/discussion-comment-controller-openapi.yaml
@@ -148,7 +148,14 @@ paths:
         - 최상위 댓글들이 반환됩니다
         - 각 댓글은 `childComments` 배열에 대댓글을 포함합니다
         - 계층 구조로 조회됩니다
+
+        **인증:**
+        - 로그인 상태이면 `isLiked`가 실제 좋아요 여부를 반환합니다
+        - 비로그인 상태이면 `isLiked`는 항상 `false`를 반환합니다
       operationId: getComments
+      security:
+        - sessionAuth: []
+        - {}
       parameters:
         - name: discussionId
           in: path
@@ -167,31 +174,56 @@ paths:
                 properties:
                   data:
                     $ref: './components/schemas/comment.yaml#/components/schemas/DiscussionCommentListResponse'
-              example:
-                data:
-                  discussionComments:
-                    - discussionCommentId: 1
-                      content: "좋은 의견입니다!"
-                      author:
-                        authorId: 123
-                        nickname: "홍길동"
-                        profileImage:
-                          customImageUri: "https://s3.amazonaws.com/dialog/profiles/user123.jpg"
-                          basicImageUri: "https://avatars.githubusercontent.com/u/12345"
-                      childComments:
-                        - discussionCommentId: 2
-                          content: "동의합니다."
+              examples:
+                loggedIn:
+                  summary: 로그인 상태 (isLiked 실제 값 반영)
+                  value:
+                    data:
+                      discussionComments:
+                        - discussionCommentId: 1
+                          content: "좋은 의견입니다!"
                           author:
-                            authorId: 456
-                            nickname: "김철수"
+                            authorId: 123
+                            nickname: "홍길동"
                             profileImage:
-                              customImageUri: null
-                              basicImageUri: "https://avatars.githubusercontent.com/u/67890"
+                              customImageUri: "https://s3.amazonaws.com/dialog/profiles/user123.jpg"
+                              basicImageUri: "https://avatars.githubusercontent.com/u/12345"
+                          childComments:
+                            - discussionCommentId: 2
+                              content: "동의합니다."
+                              author:
+                                authorId: 456
+                                nickname: "김철수"
+                                profileImage:
+                                  customImageUri: null
+                                  basicImageUri: "https://avatars.githubusercontent.com/u/67890"
+                              childComments: []
+                              createdAt: "2025-11-13T10:35:00"
+                              modifiedAt: "2025-11-13T10:35:00"
+                              likeCount: 0
+                              isLiked: false
+                          createdAt: "2025-11-13T10:30:00"
+                          modifiedAt: "2025-11-13T10:30:00"
+                          likeCount: 5
+                          isLiked: true
+                anonymous:
+                  summary: 비로그인 상태 (isLiked 항상 false)
+                  value:
+                    data:
+                      discussionComments:
+                        - discussionCommentId: 1
+                          content: "좋은 의견입니다!"
+                          author:
+                            authorId: 123
+                            nickname: "홍길동"
+                            profileImage:
+                              customImageUri: "https://s3.amazonaws.com/dialog/profiles/user123.jpg"
+                              basicImageUri: "https://avatars.githubusercontent.com/u/12345"
                           childComments: []
-                          createdAt: "2025-11-13T10:35:00"
-                          modifiedAt: "2025-11-13T10:35:00"
-                      createdAt: "2025-11-13T10:30:00"
-                      modifiedAt: "2025-11-13T10:30:00"
+                          createdAt: "2025-11-13T10:30:00"
+                          modifiedAt: "2025-11-13T10:30:00"
+                          likeCount: 5
+                          isLiked: false
         'error-codes':
           description: "[5022]"
 
